# intel-ingester

./: .pre-commit-config.yaml  CLAUDE.md  README.md  SETUP_TODO.md
backend/: .ruff.toml
backend/api/: openapi.yaml  requirements.txt
backend/api/app/: auth.py  main.py  middleware.py
backend/lambdas/collector/: handler.py  requirements.txt
backend/lambdas/emailer/: handler.py  requirements.txt
backend/lambdas/processor/: handler.py  requirements.txt
backend/lambdas/scorer/: handler.py  requirements.txt
backend/lambdas/synthesiser/: handler.py  requirements.txt
backend/shared/: pyproject.toml
backend/shared/intel_shared/clients/: bedrock.py  dynamo.py  s3.py  secrets.py
backend/shared/intel_shared/models/: dynamo.py
backend/shared/intel_shared/utils/: config.py  text.py
backend/workers/base/: base_worker.py  requirements.txt
backend/workers/manual/: Dockerfile  entrypoint.py  requirements.txt  worker.py
backend/workers/pdf/: Dockerfile  entrypoint.py  requirements.txt  worker.py
backend/workers/podcast/: Dockerfile  entrypoint.py  requirements.txt  worker.py
backend/workers/reddit/: Dockerfile  entrypoint.py  requirements.txt  worker.py
backend/workers/rss/: Dockerfile  entrypoint.py  requirements.txt  worker.py
backend/workers/youtube/: Dockerfile  entrypoint.py  requirements.txt  worker.py
frontend/: middleware.ts  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Nav.tsx  SourceBadge.tsx  (+2 more)
infra/: cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
(+28 files in other folders)
